# sparkasse-backup-decrypt

./: Cargo.toml  Pipfile  README.md  key.py  utils.py
.github/workflows/: CD.yml  CI.yml
python-version/: .gitignore  README.md  decrypt_backup.py  get_key.py  key.py
src/: decryption.rs  key.rs  main.rs  prefs.rs
