[package]
name = "sparkasse-backup-decrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
pbkdf2 = { version = "0.12", default-features = false}
hmac = { version = "0.12", default-features = false }
sha1 = { version = "0.10", package = "sha-1", default-features = false }
cbc = "0.1.2"
aes = "0.8.4"
zip = "2.1.3"
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher-vendored-openssl"] }
tempfile = "3.6.0"
clap = { version = "4.5.13", features = ["derive"] }
rpassword = "7.3.1"
